# routing_service

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  main.py
deploy/: service-role.env
