[project]
name = "routing_service"
version = "0.1.0"
description = "routing_service microservice"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "kubernetes>=30.1.0,<31.0.0",
  "httpx>=0.27.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "prometheus-client>=0.20.0,<1.0.0",
  "prometheus-fastapi-instrumentator>=7.0.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
